--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    <display-name>ldap</display-name>
+    <display-name>usercenter</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
